--- a/aula13/index.html
+++ b/aula13/index.html
@@ -11,17 +11,37 @@
         <nav>
             <img src="img/logo.png" alt="Logo Craftsy">
             <ul>
-                <a href="#smartphone"><li>Smartphones</li></a>
-                <a href="#tablets"><li>Tablets</li></a>
-                <a href="contatos.html"><li>Contato</li></a>
+                <li><a href="#smartphone">Smartphones</a></li>
+                <li><a href="#tablets">Tablets</a></li>
+                <li><a href="./contato.html" target="_blank">Contato</a></li>
             </ul>
 
-            <form>
-                <input type="text" name="produto" placeholder="Pesquise o produto" />
+            <form action="">
+                <input type="text" placeholder="Pesquise o produto" />
         
                 <button type="submit">Enviar</button>
             </form> 
         </nav>       
     </header>
+
+    <main class="container">
+        <section>
+            <article class="product product-image-1">                
+                <img src="./img/label.png" alt="" class="img-label">
+                <div class="name-product">Nome do Produto</div>
+                <button class="see-more">Ver mais</button>
+            </article>
+            <article class="product product-image-2">                
+                <img src="./img/label.png" alt="" class="img-label">
+                <div class="name-product">Nome do Produto</div>
+                <button class="see-more">Ver mais</button>
+            </article>
+            <article class="product product-image-3">                
+                <img src="./img/label.png" alt="" class="img-label">
+                <div class="name-product">Nome do Produto</div>
+                <button class="see-more">Ver mais</button>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
