Adicionando modificações a aula 13

--- a/aula13/index.html
+++ b/aula13/index.html
@@ -41,7 +41,23 @@
                 <div class="name-product">Nome do Produto</div>
                 <button class="see-more">Ver mais</button>
             </article>
+            <article class="product product-image-1">                
+                <img src="./img/label.png" alt="" class="img-label">
+                <div class="name-product">Nome do Produto</div>
+                <button class="see-more">Ver mais</button>
+            </article>
+            <article class="product product-image-2">                
+                <img src="./img/label.png" alt="" class="img-label">
+                <div class="name-product">Nome do Produto</div>
+                <button class="see-more">Ver mais</button>
+            </article>
+            <article class="product product-image-3">                
+                <img src="./img/label.png" alt="" class="img-label">
+                <div class="name-product">Nome do Produto</div>
+                <button class="see-more">Ver mais</button>
+            </article>
         </section>
     </main>
+    <footer>Craftsy - 2020</footer>
 </body>
 </html>
